Page scrollbar fixed

--- a/src/components/ColorMenu/styles.scss
+++ b/src/components/ColorMenu/styles.scss
@@ -11,7 +11,7 @@
 
     animation: appear .5s ease;
 
-    max-height: 45vh;
+    max-height: 30vh;
     overflow: auto;
 
     &::-webkit-scrollbar {
